# suncal

./: .gitignore  .pylintrc  Cargo.toml  MANIFEST.in  README.md  buildapp.sh  buildexe.bat  changes.md  environment_osx.yml  environment_win.yml  installer.iss  readme.md  requirements.txt  setup.cfg  setup.py  uncertmac.spec  uncertwin.spec  uncertwinonefile.spec  winexe_version_info.txt
doc/API Examples/: Curve Fit - Contact Resistance.ipynb  Curve Fit - Fit Models.ipynb  Curve Fit - Risk - Drifting Pressure Gage.ipynb  Reverse Uncertainty - Gage Ball Calibration.ipynb  Risk - Ball Bearing.ipynb  Risk - Deaver Methods.ipynb  Risk - Dobbert Guardband Derivation.ipynb  Risk - Risk Curves.ipynb  Risk - Uncertainty - RC Time Constant.ipynb  Uncertainty - Coaxial Transmission Properties.ipynb  Uncertainty - Complex Voltage Reflection Coefficient NIST1900.E15.ipynb  Uncertainty - End Gauge GUM.H1.ipynb  Uncertainty - Inductance Nagaoka.ipynb  Uncertainty - Instrumentation Amplifier.ipynb  Uncertainty - Magnitude and Phase GUM-S2.ipynb  Uncertainty - Resistance GUM.H2.ipynb  Uncertainty - Series Parallel Resistors.ipynb  Uncertainty - StefanBoltzmann Constant NIST UM.10.ipynb  Uncertainty - StepAttenuator NIST1900.E11.ipynb  Uncertainty - Thermal Expansion NIST1900.E13.ipynb  Uncertainty - Viscometer NIST1900.E3.ipynb
doc/API Manual/: 1 - API User Manual - Getting Started.ipynb  2 - API User Manual - Uncertainty Propagation.ipynb  3 - API User Manual - Reverse Uncertainty.ipynb  4 - API User Manual - Curve Fit Uncertainty.ipynb  4a - API User Manual - Waveform Features.ipynb  5 - API User Manual - Calibration Intervals.ipynb  6 - API User Manual - Guardbanding and False Accept Risk.ipynb  7 - API User Manual - Reproducibility and Analysis of Variance.ipynb  Suncal Complex Models.ipynb
doc/Examples/: ex_RCrisk.yaml  ex_XRF.yaml  ex_acousticchamber.yaml  ex_altimeter.yaml  ex_cannonball.yaml  ex_contactresistance.yaml  ex_drift_risk.yaml  ex_electricalcircuitproblem.yaml  ex_endgauge.yaml  ex_expansion.yaml  ex_gageball_reversesweep.yaml  ex_intervalA3.yaml  ex_intervalS2.yaml  ex_intervalvar.yaml  ex_leakrate.yaml  ex_magphase.yaml  ex_neutrons.yaml  ex_pipeorgan.yaml  ex_pitot.yaml  ex_reactance.yaml  ex_stepatten.yaml  ex_temperature_coeff.yaml  ex_viscometer.yaml  ex_voltageanova.yaml
doc/Manual/: biblio.bib  buildman.sh  header.tex  manual.css  manual.md
examples/: altimeter.toml  cannon.toml  eopr.toml  gum.toml  magphase.toml  pitot.toml  risk.toml  simple.toml  single.toml  solar.toml  typical.toml
psluncert/: .flake8  __init__.py  __main__.py  anova.py  curvefit.py  customdists.py  dist_explore.py  out_curvefit.py  out_uncert.py  output.py  project.py  reverse.py  risk.py  startui.py  sweeper.py  ttable.py  uarray.py  uncertainty.py  uparser.py  version.py
psluncert/gui/: __init__.py  configmgr.py  gen_licenses.py  gui_common.py  gui_main.py  gui_widgets.py  icons.ipynb  icons.py  licenses.py  logo.py  page_about.py  page_anova.py  page_curvefit.py  page_data.py  page_distribution.py  page_reverse.py  page_risk.py  page_sweep.py  page_uncertprop.py
resources/: index.md
src/mqa_eframe/: Cargo.toml
src/risk_eframe/: Cargo.toml  Trunk.toml
src/risk_eframe/assets/: sw.js
src/risk_eframe/src/: app.rs  main.rs
src/riskcli/: Cargo.toml
src/suncal2/: Cargo.toml
src/suncal_eframe/: Cargo.toml  index.html  rust-toolchain
src/suncal_eframe/assets/: sw.js
src/suncal_eframe/src/: app.rs  main.rs
src/sunlib/: Cargo.toml
src/units/: Cargo.toml
suncal/: __init__.py  __main__.py  anova.py  css.py  curvefit.py  customdists.py  dataset.py  dist_explore.py  distributions.html  distributions.py  index.md  latexchars.py  out_curvefit.py  out_uncert.py  output.py  plotting.py  project.py  report.py  reverse.py  risk.html  risk.py  risk_conform.html  risk_py.html  riskcurves.html  riskcurves_py.html  risktur.html  startui.py  student.html  sweeper.py  ttable.py  uarray.py  unc_complex.py  uncertainty.html  uncertainty.py  unitmgr.py  units.html  uparser.py  version.py
suncal/common/: distributions.py  limit.py  matrix.py  multivariate_t.py  plotting.py  report.py  reporter.py  ttable.py  unitmgr.py  uparser.py
suncal/curvefit/: __init__.py  curvefit.py  curvefit_model.py  fitparse.py  uncertarray.py
suncal/datasets/: __init__.py  dataset.py  dataset_model.py
suncal/distexplore/: __init__.py  dist_explore.py
suncal/gui/: PSLcal_logo.icns  __init__.py  __main__.py  colormap.py  configmgr.py  delegates.py  gen_licenses.py  gui_common.py  gui_main.py  gui_math.py  gui_settings.py  gui_styles.py  gui_widgets.py  icons.ipynb  icons.py  licenses.py  logo.py  page_about.py  page_csvload.py  page_curvefit.py  page_data.py  page_dataimport.py  page_dataset.py  page_distexplore.py  page_distribution.py  page_guardband.py  page_interval.py  page_meassys.py  page_measys_curve.py  page_mqa.py  page_reverse.py  page_risk.py  page_settings.py  page_sweep.py  page_ttable.py  page_typea.py  page_uncert.py  page_uncert_input.py  page_uncert_output.py  page_uncertprop.py  (+6 more)
suncal/intervals/: __init__.py  attributes.py  binoms2.py  fit.py  s2models.py  testa3.py  variables.py
suncal/meassys/: __init__.py  curve.py  meas_result.py  meassys.py
suncal/mqa/: __init__.py  costs.py  equipment.py  guardband.py  index.html  measure.py  mqa.py  pdf.py  result.py  risks.py  suncal2_mqaapp.js  system.py
suncal/project/: __init__.py  component.py  proj_curvefit.py  proj_dataset.py  proj_explore.py  proj_interval.py  proj_meassys.py  (+8 more)
test/: ex_endgauge.yaml  ex_endgauge_units.yaml  ex_expansion.yaml  ex_magphase.yaml  ex_solarexperiment.yaml  ex_stepatten.yaml  ex_viscometer.yaml  ex_xrf.yaml  project.yaml  readme.md  test1.yaml  test_GUMH2.csv  test_array.py  test_cli.py  test_config.py  test_cplx.py  test_curvefit.py  test_dataset.py  test_dists.py  test_examples.py  test_interval.py  test_mqa.py  test_olducalc.py  test_parser.py  test_project.py  test_report.py  test_reverse.py  test_risk.py  test_ttable.py  test_uncertainty.py  test_units.py
(+160 files in other folders)
