[metadata]
name = suncal
version = attr: suncal.version.__version__
author = Collin J. Delker
author_email = uncertainty@sandia.gov
url = https://sandialabs.github.io/suncal/
description = Sandia PSL Uncertainty Calculator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = uncertainty, metrology, measurement, GUM
license = GNU General Public License v3 (GPLv3)
project_urls =
    Documentation = https://sandialabs.github.io/suncal/
    Source Code = https://github.com/sandialabs/suncal
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: OS Independent
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop

[options]
packages = find:
zip_safe = True
python_requires = >= 3.9
include_package_data = True
install_requires =
    numpy >=1.26
    matplotlib >=3.8
    scipy >=1.15
    sympy >=1.12
    pint >=0.22
    markdown >=3.5
    pyyaml >=6.0

[options.extras_require]
gui = pyqt6

[options.entry_points]
console_scripts =
    suncal = suncal.__main__:main_unc
    suncalf = suncal.__main__:main_setup
    suncalrev = suncal.__main__:main_reverse
    suncalrisk = suncal.__main__:main_risk
    suncalfit = suncal.__main__:main_curvefit
gui_scripts =
    suncalui = suncal.gui.gui_main:main
